--- a/style.css
+++ b/style.css
@@ -112,25 +112,25 @@ main{
   font-size: var(--text);
 }
 
-.projects-links{
+.social-networks-links{
   display: flex;
   flex-direction: row;
 }
 
-.projects-link-img{
+.social-network-img{
   width: var(--img-size);
 }
 
 
 
 
-/* Dark mode */ /*
+/* Dark mode */ 
 @media (prefers-color-scheme: dark){
   body {
     background-color: var(--prusian-blue);
-  } */
+  } 
 
-  /* Profile */ /*
+  /* Profile */ 
   .profile{
     background-color: var(--indigo-dye);
   }
@@ -145,15 +145,41 @@ main{
     100% {
       background-color: var(--baby-blue);
     }
-  } */
+  } 
+  /* Profile (aside bar) */
+  .profile{
+    box-shadow: .4rem .2rem #10344a;
+  }
 
-  /* Principal content */ /*
+  /* Principal content */
   .title{
     color: var(--sky-blue-crayola);
   }
 
   .text{
-    color: var(--queen-blue);
+    color: var(--carolina-blue);
   }
-}*/
+}
 
+/* Responsive */
+@media (max-width: 767.98px){
+  body{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  main {
+    gap: 2rem;
+    padding: 1rem;
+  }
+}
+/*
+@media (max-width: 991.98px) {
+  .profile{
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+  }
+}
+*/
